{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 155,
  "lineage": "b4ec6483-3276-ff0c-6143-75f3fe817c32",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfmynic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/networkInterfaces/myfstNIC01",
            "internal_domain_name_suffix": "033mjwpgpnbexlholuu4tvmpyc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/publicIPAddresses/mypubip001",
                "subnet_id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/virtualNetworks/myVnet00121/subnets/mySnet12100"
              }
            ],
            "location": "eastus",
            "name": "myfstNIC01",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "anksolrgvk"
          },
          "dependencies": [
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowinwebin",
            "azurerm_network_security_rule.tfallowrdpin",
            "azurerm_network_security_rule.tfdenyoutwebout",
            "azurerm_network_security_rule.tfdenywebin",
            "azurerm_public_ip.tfnic1_public_ip",
            "azurerm_resource_group.AnkSolRGtf",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfmynic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/networkInterfaces/mysecNIC02",
            "internal_domain_name_suffix": "033mjwpgpnbexlholuu4tvmpyc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/publicIPAddresses/mypubip002",
                "subnet_id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/virtualNetworks/myVnet00121/subnets/mySnet12100"
              }
            ],
            "location": "eastus",
            "name": "mysecNIC02",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "anksolrgvk"
          },
          "dependencies": [
            "azurerm_network_interface.tfmynic1",
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowinwebin",
            "azurerm_network_security_rule.tfallowrdpin",
            "azurerm_network_security_rule.tfdenyoutwebout",
            "azurerm_network_security_rule.tfdenywebin",
            "azurerm_public_ip.tfnic1_public_ip",
            "azurerm_public_ip.tfnic2_public_ip",
            "azurerm_resource_group.AnkSolRGtf",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "tf_nic1_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/networkInterfaces/myfstNIC01|/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/networkSecurityGroups/myNSG001",
            "network_interface_id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/networkInterfaces/myfstNIC01",
            "network_security_group_id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/networkSecurityGroups/myNSG001"
          },
          "dependencies": [
            "azurerm_network_interface.tfmynic1",
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowinwebin",
            "azurerm_network_security_rule.tfallowrdpin",
            "azurerm_network_security_rule.tfdenyoutwebout",
            "azurerm_network_security_rule.tfdenywebin",
            "azurerm_public_ip.tfnic1_public_ip",
            "azurerm_resource_group.AnkSolRGtf",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "tf_nic2_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/networkInterfaces/mysecNIC02|/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/networkSecurityGroups/myNSG001",
            "network_interface_id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/networkInterfaces/mysecNIC02",
            "network_security_group_id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/networkSecurityGroups/myNSG001"
          },
          "dependencies": [
            "azurerm_network_interface.tfmynic1",
            "azurerm_network_interface.tfmynic2",
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowinwebin",
            "azurerm_network_security_rule.tfallowrdpin",
            "azurerm_network_security_rule.tfdenyoutwebout",
            "azurerm_network_security_rule.tfdenywebin",
            "azurerm_public_ip.tfnic1_public_ip",
            "azurerm_public_ip.tfnic2_public_ip",
            "azurerm_resource_group.AnkSolRGtf",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tfnsgname",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/networkSecurityGroups/myNSG001",
            "location": "eastus",
            "name": "myNSG001",
            "resource_group_name": "anksolrgvk",
            "security_rule": [],
            "tags": {
              "environment": "Terraform Networking"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.AnkSolRGtf",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tfallowinwebin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/networkSecurityGroups/myNSG001/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "myNSG001",
            "priority": 1100,
            "protocol": "Tcp",
            "resource_group_name": "anksolrgvk",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowrdpin",
            "azurerm_network_security_rule.tfdenywebin",
            "azurerm_resource_group.AnkSolRGtf",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tfallowrdpin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/networkSecurityGroups/myNSG001/securityRules/AllowRDPIn",
            "name": "AllowRDPIn",
            "network_security_group_name": "myNSG001",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "anksolrgvk",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tfnsgname",
            "azurerm_resource_group.AnkSolRGtf",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tfdenyoutwebout",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/networkSecurityGroups/myNSG001/securityRules/DenyOutWebOut",
            "name": "DenyOutWebOut",
            "network_security_group_name": "myNSG001",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "anksolrgvk",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "80",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowinwebin",
            "azurerm_network_security_rule.tfallowrdpin",
            "azurerm_network_security_rule.tfdenywebin",
            "azurerm_resource_group.AnkSolRGtf",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tfdenywebin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/networkSecurityGroups/myNSG001/securityRules/DenywebIn",
            "name": "DenywebIn",
            "network_security_group_name": "myNSG001",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "anksolrgvk",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "8080",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowrdpin",
            "azurerm_resource_group.AnkSolRGtf",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tfnic1_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/publicIPAddresses/mypubip001",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.172.148.191",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mypubip001",
            "resource_group_name": "anksolrgvk",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowinwebin",
            "azurerm_network_security_rule.tfallowrdpin",
            "azurerm_network_security_rule.tfdenyoutwebout",
            "azurerm_network_security_rule.tfdenywebin",
            "azurerm_resource_group.AnkSolRGtf",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tfnic2_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/publicIPAddresses/mypubip002",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.246.160.59",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mypubip002",
            "resource_group_name": "anksolrgvk",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_network_interface.tfmynic1",
            "azurerm_network_security_group.tfnsgname",
            "azurerm_network_security_rule.tfallowinwebin",
            "azurerm_network_security_rule.tfallowrdpin",
            "azurerm_network_security_rule.tfdenyoutwebout",
            "azurerm_network_security_rule.tfdenywebin",
            "azurerm_public_ip.tfnic1_public_ip",
            "azurerm_resource_group.AnkSolRGtf",
            "azurerm_subnet.tfsubnet1name",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfsubnet1name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/virtualNetworks/myVnet00121/subnets/mySnet12100",
            "name": "mySnet12100",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "anksolrgvk",
            "virtual_network_name": "myVnet00121"
          },
          "dependencies": [
            "azurerm_resource_group.AnkSolRGtf",
            "azurerm_virtual_network.tfvnetname"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tfvnetname",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d9c47ad7-7be6-4b42-acee-5d29e9d58fc2",
            "id": "/subscriptions/d40df8e9-d3c9-4a68-8333-af374546254c/resourceGroups/anksolrgvk/providers/Microsoft.Network/virtualNetworks/myVnet00121",
            "location": "eastus",
            "name": "myVnet00121",
            "resource_group_name": "anksolrgvk",
            "tags": {
              "environment": "Terraform Networking"
            }
          },
          "dependencies": [
            "azurerm_resource_group.AnkSolRGtf"
          ]
        }
      ]
    }
  ]
}